Updated to remove jquery

--- a/html/fancyVCWall.html
+++ b/html/fancyVCWall.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../shared/js/jquery-3.3.1.min.js"></script>
+    <!-- <script src="../shared/js/jquery-3.3.1.min.js"></script> -->
     <script src="../shared/js/underscore-min.js"></script>
     <script type="text/javascript" src="../shared/js/paper-full.js"></script>
     <script src="../js/pageScripts.js"></script>
